examples/invalid_beefs/with_empty_cmp/example.go
package main

import "github.com/BuxOrg/bux"

func main() {
	bux.ExampleBeefWithEmptyCmp()
}
